--- a/skills.html
+++ b/skills.html
@@ -201,16 +201,25 @@ Familiar
                                 <h5><a class="a_technical_skills">Industrial coding (VHDL & Step7)</a></h5>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-Highly Proficient
+Proficient
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-md-4">
-                                <h5><a class="a_technical_skills">Robotics and computer vision</a></h5>
+                                <h5><a class="a_technical_skills">Robotics</a></h5>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
- Highly Profficient
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+Proficient
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4">
+                                <h5><a class="a_technical_skills">Computer Vision</a></h5>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+Proficient
                                     </div>
                                 </div>
                             </div>
@@ -538,20 +547,31 @@ Familiar
             <div class="row">
                 <div class="col-lg-4">
                     <img class="img-circle" src="./resources/images/ca_circle_industrial.png" alt="Design icon" style="width: 140px; height: 140px;">
-                    <h2>Industrial coding (VHDL & Step7)</h2>
-                    <h5>Highly Proficient</h5>
+                    <h2>Industrial coding</h2>
+                    <h5>Proficient</h5>
                     <hr>
-                    <p class="skills-text">Since 2012 I've been working with VHDL programming language to develop simple applications that run on Spartan 2 and Spartan 3 FPGA. Also, Since 2014 I've been working with Step7 and made both simple and complex control logic for PLC and various devices - Traffic lights, elevators, various industrial and factory equipment, etc.</p>
+                    <p class="skills-text">Since 2012 I've been working with VHDL programming language to develop simple applications that run on Spartan 2 and Spartan 3 FPGA. Also, since 2014 I've been working with Step7 and made both simple and complex control logic for PLC and various devices - Traffic lights, elevators, various industrial and factory equipment, etc.</p>
                 </div>
 
                 <div class="col-lg-4">
                     <img class="img-circle" src="./resources/images/ca_circle_robotics.png" alt="Wireframing icon" style="width: 140px; height: 140px;">
-                    <h2>Robotics and Computer Vision</h2>
-                    <h5>Highly Profficient</h5>
+                    <h2>Robotics</h2>
+                    <h5>Profficient</h5>
                     <hr>
-                    <p class="skills-text">Robotics and Computer Vision is one of the most complex fields of study I've done. I've became very profficient with designing simple robotic manipulators and making control logic for both static robotic manipulators and mobile robots. I've became profficient in the field of computer vision, working on object detection, edge detection, object position detection, 3D cameras etc.</p>
+                    <p class="skills-text">Robotics is one of the most complex and difficults fields that I've ever done. During my education, I've learned how to design and simulate simple robotic manipulators and simple mobile robots with control and sensor logic. I've used Matlab and custom-made Robotics Toolbox addon to design and simulate the robotic manipulator.</p>
                     <p><a class="btn btn-default" href="#" role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
                 </div>
+
+                <div class="col-lg-4">
+                    <img class="img-circle" src="./resources/images/ca_circle_vision.png" alt="Wireframing icon" style="width: 140px; height: 140px;">
+                    <h2>Computer Vision</h2>
+                    <h5>Profficient</h5>
+                    <hr>
+                    <p class="skills-text">Computer Vision is also one of the most complex and difficult fields of study I've ever done. I've worked on object detection on images using SIFT and RANSAC, Edge detection using Hough Transform, 3D cameras, Histogram-based object detection, Template matching, etc.</p>
+                    <p><a class="btn btn-default" href="#" role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
+                </div>
+            </div><!-- /.row -->
+
                 <div class="col-lg-4">
                     <img class="img-circle" src="./resources/images/ca_circle_gaming.png" alt="SVN icon" style="width: 140px; height: 140px;">
                     <h2>Game design and development</h2>
@@ -559,8 +579,6 @@ Familiar
                     <hr>
                     <p class="skills-text"> I love playing PC games in my free time and I've became interested in the process of designing and making games. I am familiar with concept of game engines and working in some widely-used game engines: UDK (Unreal Engine), Unity Engine and Cryengine. <br /><br /></p>
                 </div>
-
-            </div><!-- /.row -->
 
             <div class="row">
                 <div class="col-lg-4">
