--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
         <link href="./bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
         <script src="./index_files/ie-emulation-modes-warning.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="./bootstrap-3.3.2-dist/js/menuHideShow.js"></script>
+        <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
         <style type="text/css"></style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
